# dicom-viewer

./: .git-blame-ignore-revs  .gitignore  3D_VOLUME_RENDERING_PLAN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  USER_GUIDE.md  app.py  biome.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  ruff.toml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_initial_schema.sql  002_scan_cache.sql  003_comments_sync.sql  004_study_notes_sync.sql  005_reports_sync.sql  006_sync_core.sql  007_import_tracking.sql  008_instrumentation.sql  009_drop_last_seen.sql
desktop/src-tauri/src/: decode.rs  main.rs  path_util.rs  persistence.rs  scan.rs  secure_store.rs
docs/: AGENT_LAUNCHERS.md  AGENT_WORKTREES.md  AGENT_WORKTREES_EXPLAINER.md  API.md  BUGS.md  CODE_REVIEWS.md  CONFIG.md  DEPLOY.md  DEVELOPMENT_PHILOSOPHY.md  DIVERGENT_CENTRAL_GUIDE.md  INDEX.md  PARALLEL_EXECUTION.md  RESEARCH_POLICY.md  TESTING.md  desktop-library-diagnostics.md  desktop-memory-validation.md  index.html
scripts/: agent-session-launch.sh  agent-worktree-list.sh  agent-worktree-new.sh  agent-worktree-retire.sh  ccw  codexw  desktop-memory-capture.py  desktop-memory-report.py  desktop-memory-session.sh  run-ruff.sh  session-status.sh
server/: __init__.py  audit.py  db.py  maintenance.py  security.py
site/: index.html  privacy.html
templates/: index.html  viewer-local.html  viewer.html
(+681 files in other folders)
