[package]
name = "dicom-viewer-desktop"
version = "0.3.1"
description = "myradone -- your medical imaging library"
authors = ["Gabriel Casalduc <gabriel@divergent.health>"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
dicom-object = "0.9"
dicom-pixeldata = { version = "0.9", default-features = false }
dicom-transfer-syntax-registry = { version = "0.9", features = ["openjpeg-sys"] }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["sync", "time"] }
